syntax = "proto3";

package ride;

option go_package = "/ride;ride";

service RideService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  string driver_id = 2;
  double pickup_latitude = 3;
  double pickup_longitude = 4;
  double dropoff_latitude = 5;
  double dropoff_longitude = 6;
}

message CreateOrderResponse {
  string order_id = 1;
  string driver_id = 2;
  string status = 3;
}

